examples/invalid/program74.c
int main(void) {
    int 7value;
    if (7value > 0) {
        return 1;
    }
    return 0;
}


